# ShelfOS

./: .gitignore  CODE_OF_CONDUCT.md  README.md  ShelfOS_v1.0_specification.md  package-lock.json  package.json  pyproject.toml  report.json  vitest.config.js
.github/workflows/: ci.yml
app/: __init__.py  config.py  db.py  demo_data.py  main.py  seed.py  units.py
app/api/: __init__.py  deps.py  errors.py  schemas.py
app/auth/: __init__.py  deps.py  tokens.py
app/models/: __init__.py  attachment.py  audit.py  bom.py  component.py  enums.py  invoice.py  link.py  location.py  stock.py  user.py
app/services/: __init__.py  _common.py  attachment_service.py  audit_service.py  bom_service.py  component_service.py  errors.py  invoice_service.py  link_service.py  location_service.py  stock_service.py  url_fetch.py  user_service.py
app/web/: presenter.py  routes.py
docs/: DATA_MODEL.md  DECISIONS.md  ROADMAP.md  tme-api-v2.md
scripts/: seed_demo.py
tests/: conftest.py  test_api.py  test_attachment_service.py  test_attachments_api.py  test_audit.py  test_auth.py  test_bom_service.py  test_boms_api.py  test_bootstrap.py  test_component_service.py  test_db.py  test_demo_data.py  test_invoice_service.py  test_link_service.py  test_links_api.py  test_location_service.py  test_models.py  test_queries.py  test_security_headers.py  test_shops.py  test_shops_api.py  test_shops_digikey.py  test_shops_scan.py  test_shops_tme.py  test_skeleton.py  test_stock_service.py  test_units.py  test_url_fetch.py  test_user_service.py  test_web.py
tests/fixtures/: kicad_bom.csv
tests/js/: app.test.js  attachments.test.js  boms.test.js  (+17 more)
(+54 files in other folders)
